...
  Widget build(BuildContext context, WidgetRef ref) {
    final authState = ref.watch(authProvider);
    final colorScheme = Theme.of(context).colorScheme;

    return Scaffold(
      backgroundColor: colorScheme.onPrimary,
      appBar: kIsWeb ? null : PrimaryAppBar(title: 'Profile'),
      body: Column(
        children: [
          if (kIsWeb)
            Padding(
              padding: const EdgeInsets.all(24),
              child: HeaderWeb(title: 'Profile'),
...
  ) {
    return SizedBox(
      width: kIsWeb
          ? MediaQuery.of(context).size.width * 0.25
          : double.infinity,
      child: Semantics(
        label: "Logout button",
        child: FilledButton.icon(
          onPressed: () => ref.read(authProvider.notifier).logout(),
          style: FilledButton.styleFrom(
            backgroundColor: colorScheme.error,
            foregroundColor: colorScheme.onError,
            padding: const EdgeInsets.symmetric(vertical: 16),
...
